# NumCSE

./: .gitignore  LICENSE  README.md
ex00/factorial/: Makefile  main.cpp
ex00/fractals/: Makefile  main.cpp
ex01/arrow-matrix/: Makefile  main.cpp
ex01/avoiding-cancellation/: Makefile  main.cpp
ex01/gram-schmidt/: Makefile  main.cpp
ex01/matrix-vector-product/: Makefile  main.cpp
ex02/blockwise-linear-solver/: Makefile  main.cpp
ex02/coo-multiplication/: Makefile  main.cpp
ex02/coo-to-crs/: Makefile  main.cpp
ex02/impedance-map/: Makefile  main.cpp
ex02/sequential-linear-systems/: Makefile  main.cpp
ex03/cholesky-qr/: Makefile  main.cpp
ex03/givens-rotation/: Makefile  main.cpp
ex03/sparse-approximate-inverse/: Makefile  main.cpp
ex03/tridiagonal-least-squares/: Makefile  main.cpp
ex04/eigen-faces/: Makefile  main.cpp
ex04/frobenius-least-squares/: main.cpp
ex04/low-rank-recompression/: Makefile  main.cpp
ex05/FFTLSQ/: fftlsq.cpp
ex05/fft-autofocus/: Makefile  main.cpp  utilities.hpp
ex05/fft-autofocus/src/: fftLocal.hpp  pgm.hpp  setFocus.hpp  utilities.hpp
ex05/fft-least-squares/: Makefile  main.cpp
ex06/fft-2d-convolution/: Makefile  main.cpp
ex06/fft-convolution/: Makefile  main.cpp
ex07/aitken-neville/: Makefile  main.cpp
ex07/horner-scheme/: Makefile  main.cpp
ex08/cubic-splines/: Makefile  main.cpp
ex08/graded-meshes/: Makefile  main.cpp
ex09/adaptive-interpolation/: Makefile  main.cpp  newtonIpol.hpp
ex09/chebyshev-polynomials/: Makefile  chebPolyEval.hpp  main.cpp
ex10/improper-integration/: Makefile  golubwelsh.hpp  main.cpp
ex10/smooth-integrand-transformation/: Makefile  gaussquad.hpp  main.cpp
ex11/modified-newton/: Makefile  main.cpp
ex11/newtons-method/: Makefile  main.cpp
ex11/quasi-linear-system/: Makefile  main.cpp
exams/fs2016/: CMakeLists.txt  problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp  timer.h
exams/fs2016/cmake-modules/: FindMathGL2.cmake
exams/hs2015/: CMakeLists.txt  problem1.cpp  problem2.cpp  problem3.cpp
exams/hs2016/: CMakeLists.txt  problemX_NewtonVector.cpp  problemX_polar.cpp  problemX_rankk.cpp  problemX_singlestep.cpp
exams/hs2016/cmake-modules/: FindEigen3.cmake
exams/hs2017-mock-exam/efficient-sparse-solver/: Makefile
exams/hs2017-mock-exam/estimating-point-locations/: Makefile
exams/hs2017/mock-exam/efficient-sparse-solver/: main.cpp
exams/hs2017/mock-exam/estimating-point-locations/: main.cpp
exams/hs2017/mock-exam/function-approximation/: Makefile  chebPolyEval.hpp  main.cpp
